--- a/majorAppFront/src/app/map-help/map-help.component.html
+++ b/majorAppFront/src/app/map-help/map-help.component.html
@@ -1,12 +1,4 @@
 <!-- google-maps-demo.component.html -->
-<google-map height="400px"
-            width="750px"
-            [center]="center"
-            [zoom]="zoom"
-            (mapClick)="moveMap($event)"
-            (mapMousemove)="move($event)">
-</google-map>
+<div id="map" style="height: 500px;"></div>
 
-<div>Latitude: {{display?.lat}}</div>
-<div>Longitude: {{display?.lng}}</div>
 
